# spark-handson

./: .gitignore  BENCHMARK.md  DEPLOYMENT.md  EXERCICE.md  EXO5.md  README.md  SPARK_SUBMIT_LOCAL_SETUPTOOLS.md  clean.sh  clean_aws_resources.py  pyproject.toml
.github/workflows/: deploy_glue_jobs.yml
devops/infrastructure/infra/: bucket.tf  glue.tf  iam.tf  local.tf
infra/: provider.tf
infrabackend/: main.tf
infrainit/: main.tf
src/fr/hymaia/: glue_job.py  main.py  spark_glue_job.py  spark_submit_local.py  spark_utils.py
src/fr/hymaia/exo1/: spark_wordcount_job.py
src/fr/hymaia/exo2/: spark_aggregate_job.py  spark_clean_job.py
src/fr/hymaia/exo2/aggregate/: aggregate.py
src/fr/hymaia/exo2/clean/: clean.py
src/fr/hymaia/exo4/: no_udf.py  python_udf.py  python_udf2.py  scala_udf.py
src/fr/hymaia/utils/: args_helper.py  utils.py
tests/fr/hymaia/: spark_test_case.py
tests/fr/hymaia/exo1/: test_wordwount.py
tests/fr/hymaia/exo2/aggregate/: test_aggregate.py
tests/fr/hymaia/exo2/clean/: test_clean.py
tests/fr/hymaia/exo4/: test_no_udf.py  test_python_udf.py
