[project]
name = "spark-handson"
version = "0.1.0"
description = "Résolvez les exercices"
authors = [
    {name = "Godwin Amegah", email = "komlan.godwin.amegah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil >=6.1.0",
    "tabulate>=0.9.0",
    "boto3 >=1.35.53"
]

[tool.poetry]
packages = [
    { include = "src/fr/hymaia" }
]

[tool.poetry.group.dev.dependencies]
pyspark = "3.5.3"
pytest = "7.1.2"
awsglue-dev = "^2021.12.30"

[project.scripts]
wordcount = "src.fr.hymaia.exo1.spark_wordcount_job:main"
clean = "src.fr.hymaia.exo2.spark_clean_job:main"
aggregate = "src.fr.hymaia.exo2.spark_aggregate_job:main"
python_udf = "src.fr.hymaia.exo4.python_udf:main"
scala_udf = "src.fr.hymaia.exo4.scala_udf:main"
no_udf = "src.fr.hymaia.exo4.no_udf:main"
python_udf2 = "src.fr.hymaia.exo4.python_udf2:main"
spark_submit_local = "src.fr.hymaia.spark_submit_local:main"
udf_jobs_benchmark = "src.fr.hymaia.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"